# ComfyUI-KokoroTTS-Zh

./: .gitignore  LICENSE  READEME.md  README.md  README_ZH.md  __init__.py  copytest.py  kokoro_zh.py  my_developre_quirements.txt  nodes.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: publish.yml
example_workflows/: kokoro-zh-basic.json
