[project]
name = "kokorotts-zh"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ruanjianlun/ComfyUI-KokoroTTS-Zh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-KokoroTTS-Zh"
Icon = ""
